chore(deps-update)

--- a/package.json
+++ b/package.json
@@ -38,18 +38,18 @@
     "test": "jest",
     "test-fast": "jest --config=jest.config.fast.js",
     "tsc": "tsc --noEmit",
-    "update-package-check": "ncu --dep dev,prod --reject @types/node",
-    "update-package-check-peer": "ncu --dep peer --minimal --reject @types/node",
+    "update-package-check": "ncu --dep dev,prod --reject @types/node,typescript",
+    "update-package-check-peer": "ncu --dep peer --minimal --reject @types/node,typescript",
     "update-package-check-skylib": "ncu --dep peer --filter @skylib/*",
-    "update-package-force": "ncu --dep dev,prod --reject @types/node --upgrade",
-    "update-package-force-peer": "ncu --dep peer --minimal --reject @types/node --upgrade",
+    "update-package-force": "ncu --dep dev,prod --reject @types/node,typescript --upgrade",
+    "update-package-force-peer": "ncu --dep peer --minimal --reject @types/node,typescript --upgrade",
     "update-package-force-skylib": "ncu --dep peer --filter @skylib/* --upgrade"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@jest/test-sequencer": "^27.3.1",
-    "@skylib/eslint-plugin": "^0.1.6",
+    "@skylib/eslint-plugin": "^0.1.7",
     "@types/eslint": "^8.2.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^15.14.0",
@@ -70,7 +70,7 @@
     "eslint-plugin-switch-case": "^1.1.2",
     "eslint-plugin-typescript-sort-keys": "^2.0.0",
     "eslint-plugin-unicorn": "^38.0.1",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^8.1.1",
     "jest": "^27.3.1",
     "jest-environment-jsdom": "^27.3.1",
     "jest-environment-jsdom-fifteen": "^1.0.2",
@@ -85,7 +85,7 @@
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.0.0",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.5.2",
+    "typescript": "^4.4.4",
     "vue-eslint-parser": "^8.0.1"
   },
   "engines": {
