--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "test": "jest",
     "test-fast": "jest --config=jest.config.fast.js",
     "tsc": "tsc --noEmit",
-    "update-package-check": "ncu --dep dev,prod --reject @types/node,typescript",
-    "update-package-check-peer": "ncu --dep peer --minimal --reject @types/node,typescript",
+    "update-package-check": "ncu --dep dev,prod --reject @types/node",
+    "update-package-check-peer": "ncu --dep peer --minimal --reject @types/node",
     "update-package-check-skylib": "ncu --dep peer --filter @skylib/*",
-    "update-package-force": "ncu --dep dev,prod --reject @types/node,typescript --upgrade",
-    "update-package-force-peer": "ncu --dep peer --minimal --reject @types/node,typescript --upgrade",
+    "update-package-force": "ncu --dep dev,prod --reject @types/node --upgrade",
+    "update-package-force-peer": "ncu --dep peer --minimal --reject @types/node --upgrade",
     "update-package-force-skylib": "ncu --dep peer --filter @skylib/* --upgrade"
   },
   "devDependencies": {
@@ -53,11 +53,11 @@
     "@types/eslint": "^8.2.1",
     "@types/jest": "^27.0.3",
     "@types/node": "^15.14.0",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "cpy-cli": "^3.1.1",
     "css-property-sort-order-smacss": "^2.1.3",
-    "eslint": "^8.4.0",
+    "eslint": "^8.4.1",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-filenames": "^1.3.2",
@@ -75,7 +75,7 @@
     "jest-environment-jsdom-fifteen": "^1.0.2",
     "jest-environment-node": "^27.4.2",
     "jest-transform-stub": "^2.0.0",
-    "npm-check-updates": "^12.0.2",
+    "npm-check-updates": "^12.0.3",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.2",
     "prettier": "^2.5.1",
@@ -84,7 +84,7 @@
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.0.0",
     "ts-jest": "^27.1.0",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.2",
     "vue-eslint-parser": "^8.0.1"
   },
   "engines": {
