--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsdoc": "^37.9.0",
+    "eslint-plugin-no-type-assertion": "^1.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-regexp": "^1.5.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
