--- a/package.json
+++ b/package.json
@@ -48,40 +48,63 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@getify/eslint-plugin-proper-arrows": "^11.0.3",
     "@jest/test-sequencer": "^27.5.1",
     "@skylib/eslint-plugin": "^0.1.10",
     "@types/eslint": "^8.4.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^15.14.0",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "cpy-cli": "^3.1.1",
     "css-property-sort-order-smacss": "^2.2.0",
     "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-boundaries": "^2.8.0",
     "eslint-plugin-es": "^4.1.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-etc": "^2.0.2",
     "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-github": "^4.3.5",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-jsdoc": "^37.9.4",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-lodash": "^7.4.0",
+    "eslint-plugin-more": "^1.0.5",
     "eslint-plugin-no-type-assertion": "^1.1.1",
+    "eslint-plugin-no-use-extend-native": "^0.5.0",
+    "eslint-plugin-only-warn": "^1.0.3",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-pii": "^1.0.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-regexp": "^1.5.1",
+    "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sonarjs": "^0.12.0",
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "eslint-plugin-sort-export-all": "^1.2.1",
+    "eslint-plugin-tree-shaking": "^1.10.0",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "eslint-plugin-unicorn": "^41.0.0",
     "eslint-plugin-vue": "^8.4.1",
+    "eslint-plugin-vue-scoped-css": "^2.2.0",
+    "eslint-plugin-write-good-comments": "^0.1.4",
+    "eslint-plugin-xss": "^0.1.11",
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^27.5.1",
     "jest-environment-jsdom-fifteen": "^1.0.2",
     "jest-environment-node": "^27.5.1",
     "jest-transform-stub": "^2.0.0",
-    "npm-check-updates": "^12.3.1",
+    "npm-check-updates": "^12.4.0",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.3",
     "prettier": "^2.5.1",
     "stylelint": "^14.5.1",
-    "stylelint-no-unsupported-browser-features": "^5.0.2",
+    "stylelint-no-unsupported-browser-features": "^5.0.3",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.1.0",
     "ts-jest": "^27.1.3",
