--- a/src/api/tsconfig.json
+++ b/src/api/tsconfig.json
@@ -62,7 +62,7 @@
     "removeComments": false,
     "resolveJsonModule": false,
     "skipDefaultLibCheck": false,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "strictBindCallApply": true,
