--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "eslint-plugin-sort-export-all": "^1.2.1",
     "eslint-plugin-tree-shaking": "^1.10.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "eslint-plugin-unicorn": "^41.0.0",
     "eslint-plugin-vue": "^8.5.0",
