--- a/package.json
+++ b/package.json
@@ -22,96 +22,86 @@
     "url": "git://github.com/ilyub/config.git"
   },
   "license": "ISC",
-  "author": "Ilya Lyubinskiy <admin.phpdev@gmail.com> (https://github.com/ilyub)",
+  "author": "Ilia Liubinskii <admin.phpdev@gmail.com> (https://github.com/ilyub)",
   "publisher": "ilyub",
   "scripts": {
     "commitlint": "commitlint --edit",
     "commitlint-all": "commitlint --config commitlint-all.config.js --from=",
-    "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern --report-unused-disable-directives *.{js,ts} {src,tests,__mocks__}/**/*.{js,ts,vue}",
-    "lint-fast": "eslint --config .eslintrc.fast.js --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {src,tests,__mocks__}/**/*.{js,ts,vue}",
-    "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern --report-unused-disable-directives *.{js,ts} {src,tests,__mocks__}/**/*.{js,ts,vue}",
+    "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,src,tests}/**/*.{js,ts,vue}",
+    "lint-fast": "eslint --config .eslintrc.fast.js --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,src,tests}/**/*.{js,ts,vue}",
+    "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,src,tests}/**/*.{js,ts,vue}",
     "prepare": "cpy src/git-hooks/* .git/hooks",
-    "stylelint": "stylelint --fix --max-warnings 0 {src,tests}/**/*.{css,scss}",
-    "stylelint-html": "stylelint --config .stylelintrc-html.js --fix --max-warnings 0 {src,tests}/**/*.{html,php,vue}",
-    "stylelint-html-no-fix": "stylelint --config .stylelintrc-html.js --max-warnings 0 {src,tests}/**/*.{html,php,vue}",
-    "stylelint-no-fix": "stylelint --max-warnings 0 {src,tests}/**/*.{css,scss}",
+    "stylelint": "stylelint --fix --max-warnings 0 src/**/*.{css,scss}",
+    "stylelint-html": "stylelint --config .stylelintrc-html.js --fix --max-warnings 0 src/**/*.{html,php,vue}",
+    "stylelint-html-no-fix": "stylelint --config .stylelintrc-html.js --max-warnings 0 src/**/*.{html,php,vue}",
+    "stylelint-no-fix": "stylelint --max-warnings 0 src/**/*.{css,scss}",
     "test": "jest",
     "test-fast": "jest --config=jest.config.fast.js",
     "tsc": "tsc --noEmit",
     "update-package-check": "ncu --dep dev,prod --reject @types/node",
     "update-package-check-peer": "ncu --dep peer --minimal --reject @types/node",
-    "update-package-check-skylib": "ncu --dep peer --filter @skylib/*",
+    "update-package-check-skylib": "ncu --minimal --filter @skylib/*",
     "update-package-force": "ncu --dep dev,prod --reject @types/node --upgrade",
     "update-package-force-peer": "ncu --dep peer --minimal --reject @types/node --upgrade",
-    "update-package-force-skylib": "ncu --dep peer --filter @skylib/* --upgrade"
+    "update-package-force-skylib": "ncu --minimal --filter @skylib/* --upgrade"
   },
-  "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@getify/eslint-plugin-proper-arrows": "^11.0.3",
-    "@jest/test-sequencer": "^27.5.1",
-    "@skylib/eslint-plugin": "^0.1.13",
-    "@types/eslint": "^8.4.1",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^15.14.0",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "cpy-cli": "^4.1.0",
-    "css-property-sort-order-smacss": "^2.2.0",
-    "eslint": "^8.12.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
-    "eslint-plugin-boundaries": "^2.9.0",
-    "eslint-plugin-es": "^4.1.0",
-    "eslint-plugin-escompat": "^3.1.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-etc": "^2.0.2",
-    "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-github": "^4.3.6",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.3",
-    "eslint-plugin-jest-dom": "^4.0.1",
-    "eslint-plugin-jsdoc": "^38.0.7",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-lodash": "^7.4.0",
-    "eslint-plugin-more": "^1.0.5",
-    "eslint-plugin-no-type-assertion": "^1.3.0",
+  "peerDependencies": {
+    "@commitlint/cli": "^16.0.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@jest/test-sequencer": "^27.0.0",
+    "@skylib/eslint-plugin": "^0.1.0",
+    "@types/eslint": "^8.0.0",
+    "@types/jest": "^27.0.0",
+    "@types/node": "^15.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "cpy-cli": "^4.0.0",
+    "css-property-sort-order-smacss": "^2.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-boundaries": "^2.0.0",
+    "eslint-plugin-es": "^4.0.0",
+    "eslint-plugin-escompat": "^3.0.0",
+    "eslint-plugin-eslint-comments": "^3.0.0",
+    "eslint-plugin-etc": "^2.0.0",
+    "eslint-plugin-github": "^4.0.0",
+    "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-jest": "^26.0.0",
+    "eslint-plugin-jsdoc": "^38.0.0",
+    "eslint-plugin-no-type-assertion": "^1.0.0",
     "eslint-plugin-no-use-extend-native": "^0.5.0",
-    "eslint-plugin-only-warn": "^1.0.3",
-    "eslint-plugin-optimize-regex": "^1.2.1",
-    "eslint-plugin-pii": "^1.0.2",
+    "eslint-plugin-only-warn": "^1.0.0",
+    "eslint-plugin-pii": "^1.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-regexp": "^1.6.0",
-    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-regexp": "^1.0.0",
+    "eslint-plugin-security": "^1.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sonarjs": "^0.12.0",
-    "eslint-plugin-sort-destructure-keys": "^1.4.0",
-    "eslint-plugin-sort-export-all": "^1.2.1",
-    "eslint-plugin-tree-shaking": "^1.10.0",
-    "eslint-plugin-tsdoc": "^0.2.14",
-    "eslint-plugin-typescript-sort-keys": "^2.1.0",
-    "eslint-plugin-unicorn": "^41.0.1",
-    "eslint-plugin-vue": "^8.5.0",
-    "eslint-plugin-vue-scoped-css": "^2.2.0",
-    "eslint-plugin-write-good-comments": "^0.1.4",
-    "eslint-plugin-xss": "^0.1.11",
-    "jest": "^27.5.1",
-    "jest-environment-jsdom": "^27.5.1",
-    "jest-environment-jsdom-fifteen": "^1.0.2",
-    "jest-environment-node": "^27.5.1",
+    "eslint-plugin-sort-destructure-keys": "^1.0.0",
+    "eslint-plugin-sort-export-all": "^1.0.0",
+    "eslint-plugin-typescript-sort-keys": "^2.0.0",
+    "eslint-plugin-unicorn": "^41.0.0",
+    "eslint-plugin-vue": "^8.0.0",
+    "eslint-plugin-vue-scoped-css": "^2.0.0",
+    "eslint-plugin-xss": "^0.1.0",
+    "jest": "^27.0.0",
+    "jest-environment-jsdom": "^27.0.0",
+    "jest-environment-jsdom-fifteen": "^1.0.0",
+    "jest-environment-node": "^27.0.0",
     "jest-transform-stub": "^2.0.0",
-    "npm-check-updates": "^12.5.4",
-    "postcss-html": "^1.3.0",
-    "postcss-scss": "^4.0.3",
-    "prettier": "^2.6.1",
-    "stylelint": "^14.6.1",
-    "stylelint-no-unsupported-browser-features": "^5.0.3",
+    "npm-check-updates": "^12.0.0",
+    "postcss-html": "^1.0.0",
+    "postcss-scss": "^4.0.0",
+    "prettier": "^2.0.0",
+    "stylelint": "^14.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-no-unsupported-browser-features": "^5.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.2.0",
-    "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3",
-    "vue-eslint-parser": "^8.3.0"
+    "ts-jest": "^27.0.0",
+    "typescript": "^4.0.0",
+    "vue-eslint-parser": "^8.0.0"
   },
   "engines": {
     "node": ">=14.0.0",
