--- a/tsconfig-min.json
+++ b/tsconfig-min.json
@@ -36,7 +36,9 @@
     "__mocks__/**/*.js",
     "__mocks__/**/*.ts",
     "__mocks__/**/*.vue",
+    "fixtures/*.js",
     "fixtures/*.ts",
+    "fixtures/*.vue",
     "src/**/*.js",
     "src/**/*.ts",
     "src/**/*.vue",
