--- a/package.json
+++ b/package.json
@@ -46,62 +46,62 @@
     "update-package-force-skylib": "ncu  --dep peer --filter @skylib/* --upgrade"
   },
   "peerDependencies": {
-    "@commitlint/cli": "^16.0.0",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@jest/test-sequencer": "^27.0.0",
-    "@skylib/eslint-plugin": "^0.1.0",
-    "@types/eslint": "^8.0.0",
-    "@types/jest": "^27.0.0",
-    "@types/node": "^15.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "cpy-cli": "^4.0.0",
-    "css-property-sort-order-smacss": "^2.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^8.0.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-boundaries": "^2.0.0",
-    "eslint-plugin-es": "^4.0.0",
-    "eslint-plugin-escompat": "^3.0.0",
-    "eslint-plugin-eslint-comments": "^3.0.0",
-    "eslint-plugin-etc": "^2.0.0",
-    "eslint-plugin-github": "^4.0.0",
-    "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-jest": "^26.0.0",
-    "eslint-plugin-jsdoc": "^38.0.0",
-    "eslint-plugin-no-type-assertion": "^1.0.0",
-    "eslint-plugin-no-use-extend-native": "^0.5.0",
-    "eslint-plugin-only-warn": "^1.0.0",
-    "eslint-plugin-pii": "^1.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-regexp": "^1.0.0",
-    "eslint-plugin-security": "^1.0.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-sonarjs": "^0.12.0",
-    "eslint-plugin-sort-destructure-keys": "^1.0.0",
-    "eslint-plugin-sort-export-all": "^1.0.0",
-    "eslint-plugin-typescript-sort-keys": "^2.0.0",
-    "eslint-plugin-unicorn": "^41.0.0",
-    "eslint-plugin-vue": "^8.0.0",
-    "eslint-plugin-vue-scoped-css": "^2.0.0",
-    "eslint-plugin-xss": "^0.1.0",
-    "jest": "^27.0.0",
-    "jest-environment-jsdom": "^27.0.0",
-    "jest-environment-jsdom-fifteen": "^1.0.0",
-    "jest-environment-node": "^27.0.0",
-    "jest-transform-stub": "^2.0.0",
-    "npm-check-updates": "^12.0.0",
-    "postcss-html": "^1.0.0",
-    "postcss-scss": "^4.0.0",
-    "prettier": "^2.0.0",
-    "stylelint": "^14.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-no-unsupported-browser-features": "^5.0.0",
-    "stylelint-order": "^5.0.0",
-    "ts-jest": "^27.0.0",
-    "typescript": "^4.0.0",
-    "vue-eslint-parser": "^8.0.0"
+    "@commitlint/cli": ">=16.0.0",
+    "@commitlint/config-conventional": ">=16.0.0",
+    "@jest/test-sequencer": ">=27.0.0",
+    "@skylib/eslint-plugin": ">=0.1.0",
+    "@types/eslint": ">=8.0.0",
+    "@types/jest": ">=27.0.0",
+    "@types/node": ">=15.0.0",
+    "@typescript-eslint/eslint-plugin": ">=5.0.0",
+    "@typescript-eslint/parser": ">=5.0.0",
+    "cpy-cli": ">=4.0.0",
+    "css-property-sort-order-smacss": ">=2.0.0",
+    "eslint": ">=8.0.0",
+    "eslint-config-prettier": ">=8.0.0",
+    "eslint-import-resolver-typescript": ">=2.0.0",
+    "eslint-plugin-boundaries": ">=2.0.0",
+    "eslint-plugin-es": ">=4.0.0",
+    "eslint-plugin-escompat": ">=3.0.0",
+    "eslint-plugin-eslint-comments": ">=3.0.0",
+    "eslint-plugin-etc": ">=2.0.0",
+    "eslint-plugin-github": ">=4.0.0",
+    "eslint-plugin-import": ">=2.0.0",
+    "eslint-plugin-jest": ">=26.0.0",
+    "eslint-plugin-jsdoc": ">=38.0.0",
+    "eslint-plugin-no-type-assertion": ">=1.0.0",
+    "eslint-plugin-no-use-extend-native": ">=0.5.0",
+    "eslint-plugin-only-warn": ">=1.0.0",
+    "eslint-plugin-pii": ">=1.0.0",
+    "eslint-plugin-prettier": ">=4.0.0",
+    "eslint-plugin-promise": ">=6.0.0",
+    "eslint-plugin-regexp": ">=1.0.0",
+    "eslint-plugin-security": ">=1.0.0",
+    "eslint-plugin-simple-import-sort": ">=7.0.0",
+    "eslint-plugin-sonarjs": ">=0.12.0",
+    "eslint-plugin-sort-destructure-keys": ">=1.0.0",
+    "eslint-plugin-sort-export-all": ">=1.0.0",
+    "eslint-plugin-typescript-sort-keys": ">=2.0.0",
+    "eslint-plugin-unicorn": ">=41.0.0",
+    "eslint-plugin-vue": ">=8.0.0",
+    "eslint-plugin-vue-scoped-css": ">=2.0.0",
+    "eslint-plugin-xss": ">=0.1.0",
+    "jest": ">=27.0.0",
+    "jest-environment-jsdom": ">=27.0.0",
+    "jest-environment-jsdom-fifteen": ">=1.0.0",
+    "jest-environment-node": ">=27.0.0",
+    "jest-transform-stub": ">=2.0.0",
+    "npm-check-updates": ">=12.0.0",
+    "postcss-html": ">=1.0.0",
+    "postcss-scss": ">=4.0.0",
+    "prettier": ">=2.0.0",
+    "stylelint": ">=14.0.0",
+    "stylelint-config-standard-scss": ">=3.0.0",
+    "stylelint-no-unsupported-browser-features": ">=5.0.0",
+    "stylelint-order": ">=5.0.0",
+    "ts-jest": ">=27.0.0",
+    "typescript": ">=4.0.0",
+    "vue-eslint-parser": ">=8.0.0"
   },
   "engines": {
     "node": ">=14.0.0",
