feat(typescript): Edited "tsconfig.json" and "tsconfig-min.json" files

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,15 @@
 {
   "compilerOptions": {
     "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "strict": true,
     "useUnknownInCatchVariables": true
   },
-  "extends": "./typescript/tsconfig"
+  "extends": "./tsconfig-min"
 }
