--- a/src/tsconfig-strict.json
+++ b/src/tsconfig-strict.json
@@ -11,5 +11,5 @@
     "strict": true,
     "useUnknownInCatchVariables": true
   },
-  "extends": "./tsconfig-min"
+  "extends": "./tsconfig-base"
 }
