--- a/package.json
+++ b/package.json
@@ -100,6 +100,10 @@
     "stylelint-no-unsupported-browser-features": ">=5.0.0",
     "stylelint-order": ">=5.0.0",
     "ts-jest": ">=27.0.0",
+    "ts-transform-import-path-rewrite": "^0.3.0",
+    "ttypescript": "^1.0.0",
+    "typedoc": "^0.22.0",
+    "typedoc-plugin-markdown": "^3.0.0",
     "typescript": ">=4.0.0",
     "vue-eslint-parser": ">=8.0.0"
   },
