--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@commitlint/cli": ">=16.0.0",
     "@commitlint/config-conventional": ">=16.0.0",
     "@jest/test-sequencer": ">=27.0.0",
-    "@skylib/eslint-plugin": ">=0.1.16",
+    "@skylib/eslint-plugin": ">=0.1.17",
     "@types/eslint": ">=8.0.0",
     "@types/jest": ">=27.0.0",
     "@types/node": ">=15.0.0",
@@ -100,10 +100,11 @@
     "stylelint-no-unsupported-browser-features": ">=5.0.0",
     "stylelint-order": ">=5.0.0",
     "ts-jest": ">=27.0.0",
-    "ts-transform-import-path-rewrite": "^0.3.0",
-    "ttypescript": "^1.0.0",
-    "typedoc": "^0.22.0",
-    "typedoc-plugin-markdown": "^3.0.0",
+    "ts-transform-import-path-rewrite": ">=0.3.0",
+    "tslib": ">=2.0.0",
+    "ttypescript": ">=1.0.0",
+    "typedoc": ">=0.22.0",
+    "typedoc-plugin-markdown": ">=3.0.0",
     "typescript": ">=4.0.0",
     "vue-eslint-parser": ">=8.0.0"
   },
