feat(typescript): Added  "allowUnreachableCode" and "allowUnusedLabels" options

--- a/src/tsconfig-min.json
+++ b/src/tsconfig-min.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
     "allowJs": true,
     "declaration": true,
     "declarationMap": true,
