--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-config-prettier": ">=8.0.0",
     "eslint-import-resolver-typescript": ">=2.0.0",
     "eslint-plugin-boundaries": ">=2.0.0",
+    "eslint-plugin-deprecation": ">=1.0.0",
     "eslint-plugin-es": ">=4.0.0",
     "eslint-plugin-escompat": ">=3.0.0",
     "eslint-plugin-eslint-comments": ">=3.0.0",
