chore(sonar): Added "sonar.coverage.exclusions" option

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
+sonar.coverage.exclusions=**
 sonar.cpd.exclusions=
 sonar.exclusions=cache/**,dist/**,docs/**,es/**,lcov-report/**,node_modules/**
 sonar.javascript.file.suffixes=.js
