--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   "scripts": {
     "commitlint": "commitlint --edit",
     "commitlint-all": "commitlint --config commitlint-all.config.js --from=",
-    "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,src,tests}/**/*.{js,ts,vue}",
-    "lint-fast": "eslint --config .eslintrc.fast.js --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,src,tests}/**/*.{js,ts,vue}",
-    "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,src,tests}/**/*.{js,ts,vue}",
+    "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
+    "lint-fast": "eslint --config .eslintrc.fast.js --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,fixtures,configs,src,tests}/**/*.{js,ts,vue}",
+    "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
     "prepare": "cpy src/git-hooks/* .git/hooks",
     "stylelint": "stylelint --fix --max-warnings 0 src/**/*.{css,scss}",
     "stylelint-html": "stylelint --config .stylelintrc-html.js --fix --max-warnings 0 src/**/*.{html,php,vue}",
@@ -102,7 +102,6 @@
     "ts-jest": ">=27.0.0",
     "ts-transform-import-path-rewrite": ">=0.3.0",
     "tslib": ">=2.0.0",
-    "ttypescript": ">=1.0.0",
     "typedoc": ">=0.22.0",
     "typedoc-plugin-markdown": ">=3.0.0",
     "typescript": ">=4.0.0",
