--- a/package.json
+++ b/package.json
@@ -69,11 +69,13 @@
     "eslint-plugin-github": ">=4.0.0",
     "eslint-plugin-import": ">=2.0.0",
     "eslint-plugin-jest": ">=26.0.0",
+    "eslint-plugin-jest-extended": ">=0.0.1",
     "eslint-plugin-jsdoc": ">=38.0.0",
     "eslint-plugin-no-type-assertion": ">=1.0.0",
     "eslint-plugin-no-use-extend-native": ">=0.5.0",
     "eslint-plugin-only-warn": ">=1.0.0",
     "eslint-plugin-pii": ">=1.0.0",
+
     "eslint-plugin-prettier": ">=4.0.0",
     "eslint-plugin-promise": ">=6.0.0",
     "eslint-plugin-regexp": ">=1.0.0",
