--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/node": ">=15.0.0",
     "@typescript-eslint/eslint-plugin": ">=5.0.0",
     "@typescript-eslint/parser": ">=5.0.0",
+    "@vue/vue3-jest": ">=27.0.0",
     "cpy-cli": ">=4.0.0",
     "css-property-sort-order-smacss": ">=2.0.0",
     "eslint": ">=8.0.0",
@@ -75,7 +76,6 @@
     "eslint-plugin-no-use-extend-native": ">=0.5.0",
     "eslint-plugin-only-warn": ">=1.0.0",
     "eslint-plugin-pii": ">=1.0.0",
-
     "eslint-plugin-prettier": ">=4.0.0",
     "eslint-plugin-promise": ">=6.0.0",
     "eslint-plugin-regexp": ">=1.0.0",
