--- a/package.json
+++ b/package.json
@@ -48,14 +48,14 @@
   "peerDependencies": {
     "@commitlint/cli": ">=16.0.0",
     "@commitlint/config-conventional": ">=16.0.0",
-    "@jest/test-sequencer": "^27.0.0",
-    "@skylib/eslint-plugin": "^0.1.27",
+    "@jest/test-sequencer": ">=28.0.0",
+    "@skylib/eslint-plugin": "^0.1.28",
     "@types/eslint": ">=8.0.0",
-    "@types/jest": "^27.0.0",
+    "@types/jest": ">=27.0.0",
     "@types/node": ">=15.0.0",
     "@typescript-eslint/eslint-plugin": ">=5.0.0",
     "@typescript-eslint/parser": ">=5.0.0",
-    "@vue/vue3-jest": "^27.0.0",
+    "@vue/vue3-jest": ">=28.0.0",
     "cpy-cli": ">=4.0.0",
     "css-property-sort-order-smacss": ">=2.0.0",
     "eslint": ">=8.0.0",
@@ -87,9 +87,9 @@
     "eslint-plugin-vue": ">=8.0.0",
     "eslint-plugin-vue-scoped-css": ">=2.0.0",
     "eslint-plugin-xss": ">=0.1.0",
-    "jest": "^27.0.0",
-    "jest-environment-jsdom": "^27.0.0",
-    "jest-environment-node": "^27.0.0",
+    "jest": ">=28.0.0",
+    "jest-environment-jsdom": ">=28.0.0",
+    "jest-environment-node": ">=28.0.0",
     "jest-transform-stub": ">=2.0.0",
     "npm-check-updates": ">=12.0.0",
     "postcss-html": ">=1.0.0",
@@ -99,7 +99,7 @@
     "stylelint-config-standard-scss": ">=3.0.0",
     "stylelint-no-unsupported-browser-features": ">=5.0.0",
     "stylelint-order": ">=5.0.0",
-    "ts-jest": "^27.0.0",
+    "ts-jest": ">=28.0.0",
     "ts-transform-import-path-rewrite": ">=0.3.0",
     "tslib": ">=2.0.0",
     "typedoc": ">=0.22.0",
