--- a/package.json
+++ b/package.json
@@ -38,77 +38,74 @@
     "test": "jest",
     "test-fast": "jest --config=jest.config.fast.js",
     "tsc": "tsc --noEmit",
-    "update-package-check": "ncu --dep dev,prod",
-    "update-package-check-peer": "ncu --dep peer --minimal",
-    "update-package-check-skylib": "ncu --dep peer --filter @skylib/*",
-    "update-package-force": "ncu --dep dev,prod --upgrade",
-    "update-package-force-peer": "ncu --dep peer --minimal --upgrade",
-    "update-package-force-skylib": "ncu --dep peer --filter @skylib/* --upgrade"
+    "update-package-check": "ncu --dep dev,peer,prod",
+    "update-package-force": "ncu --dep dev,peer,prod --upgrade"
   },
   "peerDependencies": {
-    "@commitlint/cli": ">=17.0.0",
-    "@commitlint/config-conventional": ">=17.0.0",
-    "@jest/test-sequencer": ">=28.0.0",
+    "@commitlint/cli": ">=17",
+    "@commitlint/config-conventional": ">=17",
+    "@jest/test-sequencer": ">=28",
     "@skylib/eslint-plugin": "^0.1.28",
-    "@types/eslint": ">=8.0.0",
-    "@types/jest": ">=27.0.0",
-    "@types/node": ">=17.0.0",
-    "@typescript-eslint/eslint-plugin": ">=5.0.0",
-    "@typescript-eslint/parser": ">=5.0.0",
-    "@vue/vue3-jest": ">=28.0.0",
-    "cpy-cli": ">=4.0.0",
-    "css-property-sort-order-smacss": ">=2.0.0",
-    "eslint": ">=8.0.0",
-    "eslint-config-prettier": ">=8.0.0",
-    "eslint-import-resolver-typescript": ">=2.0.0",
-    "eslint-plugin-boundaries": ">=2.0.0",
-    "eslint-plugin-deprecation": ">=1.0.0",
-    "eslint-plugin-es": ">=4.0.0",
-    "eslint-plugin-escompat": ">=3.0.0",
-    "eslint-plugin-eslint-comments": ">=3.0.0",
-    "eslint-plugin-etc": ">=2.0.0",
-    "eslint-plugin-github": ">=4.0.0",
-    "eslint-plugin-import": ">=2.0.0",
-    "eslint-plugin-jest": ">=26.0.0",
-    "eslint-plugin-jest-extended": ">=0.0.1",
-    "eslint-plugin-jsdoc": ">=39.0.0",
-    "eslint-plugin-no-type-assertion": ">=1.0.0",
-    "eslint-plugin-no-use-extend-native": ">=0.5.0",
-    "eslint-plugin-only-warn": ">=1.0.0",
-    "eslint-plugin-pii": ">=1.0.0",
-    "eslint-plugin-prettier": ">=4.0.0",
-    "eslint-plugin-promise": ">=6.0.0",
-    "eslint-plugin-regexp": ">=1.0.0",
-    "eslint-plugin-security": ">=1.0.0",
-    "eslint-plugin-sonarjs": ">=0.13.0",
-    "eslint-plugin-sort-destructure-keys": ">=1.0.0",
-    "eslint-plugin-typescript-sort-keys": ">=2.0.0",
-    "eslint-plugin-unicorn": ">=42.0.0",
-    "eslint-plugin-vue": ">=9.0.0",
-    "eslint-plugin-vue-scoped-css": ">=2.0.0",
-    "eslint-plugin-xss": ">=0.1.0",
-    "jest": ">=28.0.0",
-    "jest-environment-jsdom": ">=28.0.0",
-    "jest-environment-node": ">=28.0.0",
-    "jest-transform-stub": ">=2.0.0",
-    "npm-check-updates": ">=13.0.0",
-    "postcss-html": ">=1.0.0",
-    "postcss-scss": ">=4.0.0",
-    "prettier": ">=2.0.0",
-    "stylelint": ">=14.0.0",
-    "stylelint-config-standard-scss": ">=4.0.0",
-    "stylelint-no-unsupported-browser-features": ">=5.0.0",
-    "stylelint-order": ">=5.0.0",
-    "ts-jest": ">=28.0.0",
-    "ts-transform-import-path-rewrite": ">=0.3.0",
-    "tslib": ">=2.0.0",
-    "typedoc": ">=0.22.0",
-    "typedoc-plugin-markdown": ">=3.0.0",
-    "typescript": ">=4.0.0",
-    "vue-eslint-parser": ">=9.0.0"
+    "@types/eslint": ">=8",
+    "@types/jest": ">=28",
+    "@types/node": ">=18",
+    "@typescript-eslint/eslint-plugin": ">=5",
+    "@typescript-eslint/parser": ">=5",
+    "@vue/vue3-jest": ">=28",
+    "cpy-cli": ">=4",
+    "css-property-sort-order-smacss": ">=2",
+    "eslint": ">=8",
+    "eslint-config-prettier": ">=8",
+    "eslint-import-resolver-typescript": ">=2",
+    "eslint-plugin-boundaries": ">=2",
+    "eslint-plugin-deprecation": ">=1",
+    "eslint-plugin-es": ">=4",
+    "eslint-plugin-escompat": ">=3",
+    "eslint-plugin-eslint-comments": ">=3",
+    "eslint-plugin-etc": ">=2",
+    "eslint-plugin-github": ">=4",
+    "eslint-plugin-import": ">=2",
+    "eslint-plugin-jest": ">=26",
+    "eslint-plugin-jest-extended": ">=0",
+    "eslint-plugin-jsdoc": ">=39",
+    "eslint-plugin-no-type-assertion": ">=1",
+    "eslint-plugin-no-use-extend-native": ">=0",
+    "eslint-plugin-only-warn": ">=1",
+    "eslint-plugin-pii": ">=1",
+    "eslint-plugin-prettier": ">=4",
+    "eslint-plugin-promise": ">=6",
+    "eslint-plugin-regexp": ">=1",
+    "eslint-plugin-security": ">=1",
+    "eslint-plugin-sonarjs": ">=0",
+    "eslint-plugin-sort-destructure-keys": ">=1",
+    "eslint-plugin-typescript-sort-keys": ">=2",
+    "eslint-plugin-unicorn": ">=42",
+    "eslint-plugin-vue": ">=9",
+    "eslint-plugin-vue-scoped-css": ">=2",
+    "eslint-plugin-xss": ">=0",
+    "jest": ">=28",
+    "jest-environment-jsdom": ">=28",
+    "jest-environment-node": ">=28",
+    "jest-transform-stub": ">=2",
+    "npm-check-updates": ">=14",
+    "postcss-html": ">=1",
+    "postcss-scss": ">=4",
+    "prettier": ">=2",
+    "stylelint": ">=14",
+    "stylelint-config-standard-scss": ">=4",
+    "stylelint-no-unsupported-browser-features": ">=5",
+    "stylelint-order": ">=5",
+    "ts-jest": ">=28",
+    "ts-transform-import-path-rewrite": ">=0",
+    "tslib": ">=2",
+    "typedoc": ">=0",
+    "typedoc-plugin-markdown": ">=3",
+    "typescript": ">=4",
+    "vue-eslint-parser": ">=9"
   },
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=7.0.0"
+
   }
 }
