--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,8 @@
     ".eslintrc.js",
     ".eslintrc.fast.js",
     ".eslintrc.options.js",
+    ".eslintrc.overrides.js",
+    ".eslintrc.temp.js",
     ".postcssrc.js",
     ".prettierrc.js",
     ".stylelintrc.js",
