--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@skylib/config",
   "version": "1.18.0",
   "private": false,
-  "main": "src/index.js",
   "description": "Config for commitlint, eslint, jest, php-cs-fixer, stylelint, typedoc, and typescript",
   "keywords": [
     "commitlint",
@@ -25,14 +24,26 @@
   "license": "ISC",
   "author": "Ilia Liubinskii <admin.phpdev@gmail.com> (https://github.com/ilyub)",
   "publisher": "ilyub",
+  "main": "src/index.js",
+  "files": [
+    "/index.d.ts",
+    "/src",
+    "!**/samples"
+  ],
   "scripts": {
+    "browserslist": "echo Not implemented",
+    "build": "echo Not implemented",
+    "build-doc": "echo Not implemented",
+    "build-es": "echo Not implemented",
     "commitlint": "commitlint --edit",
     "commitlint-all": "commitlint --config commitlint-all.config.js --from=",
+    "compile": "echo Not implemented",
     "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
     "lint-fast": "eslint --config .eslintrc.fast.js --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
     "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
     "package-json-lint": "npmPkgJsonLint .",
     "prepare": "cpy src/git-hooks/* .git/hooks",
+    "serve": "echo Not implemented",
     "stylelint": "stylelint --fix --max-warnings 0 src/**/*.{css,scss}",
     "stylelint-html": "stylelint --config .stylelintrc-html.js --fix --max-warnings 0 src/**/*.{html,php,vue}",
     "stylelint-html-no-fix": "stylelint --config .stylelintrc-html.js --max-warnings 0 src/**/*.{html,php,vue}",
@@ -41,7 +52,8 @@
     "test-fast": "jest --config=jest.config.fast.js",
     "tsc": "tsc --noEmit",
     "update-package-check": "ncu --dep dev,peer,prod",
-    "update-package-force": "ncu --dep dev,peer,prod --upgrade"
+    "update-package-force": "ncu --dep dev,peer,prod --upgrade",
+    "vue-tsc": "echo Not implemented"
   },
   "peerDependencies": {
     "@commitlint/cli": ">=17",
@@ -69,6 +81,7 @@
     "eslint-plugin-import": ">=2",
     "eslint-plugin-jest": ">=26",
     "eslint-plugin-jest-extended": ">=0",
+    "eslint-plugin-jquery": ">=1",
     "eslint-plugin-jsdoc": ">=39",
     "eslint-plugin-no-type-assertion": ">=1",
     "eslint-plugin-no-use-extend-native": ">=0",
@@ -106,11 +119,11 @@
     "typescript": ">=4",
     "vue-eslint-parser": ">=9"
   },
-  "publishConfig": {
-    "access": "public"
-  },
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=7.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
