fix(package-json-lint): Fixed public and private configuration

--- a/.npmpackagejsonlintrc.json
+++ b/.npmpackagejsonlintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "./src/package-json-lint.public.json"
+  "extends": [
+    "./src/package-json-lint.json",
+    "./src/package-json-lint.public.json"
+  ]
 }
