chore(refactor,typescript)

--- a/tsconfig-min.json
+++ b/tsconfig-min.json
@@ -1,4 +1,32 @@
 {
+  "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "cache/typescript",
+    "paths": {
+      "@": [
+        "src"
+      ],
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "typeRoots": [
+      "node_modules/@skylib",
+      "node_modules/@types"
+    ],
+    "types": [
+      "jest"
+    ]
+  },
+  "exclude": [
+    "cache",
+    "dist",
+    "docs",
+    "es",
+    "lcov-report",
+    "node_modules"
+  ],
+  "extends": "./src/tsconfig-min",
   "include": [
     "*.js",
     "*.ts",
@@ -25,33 +53,5 @@
     "tests/**/*.js",
     "tests/**/*.ts",
     "tests/**/*.vue"
-  ],
-  "extends": "./src/tsconfig-min",
-  "exclude": [
-    "cache",
-    "dist",
-    "docs",
-    "es",
-    "lcov-report",
-    "node_modules"
-  ],
-  "compilerOptions": {
-    "types": [
-      "jest"
-    ],
-    "typeRoots": [
-      "node_modules/@skylib",
-      "node_modules/@types"
-    ],
-    "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@": [
-        "src"
-      ]
-    },
-    "outDir": "cache/typescript",
-    "baseUrl": "."
-  }
+  ]
 }
