--- a/package.json
+++ b/package.json
@@ -31,18 +31,30 @@
     "!**/samples"
   ],
   "scripts": {
+    "add-tags": "php src/utils/add-tags.php",
+    "audit": "npm audit",
     "browserslist": "echo Not implemented",
     "build": "echo Not implemented",
     "build-doc": "echo Not implemented",
     "build-es": "echo Not implemented",
+    "clear-cache": "cf cache node_modules/.cache",
+    "commit-msg": "npm run commitlint",
     "commitlint": "commitlint --edit",
     "commitlint-all": "commitlint --config commitlint-all.config.js --from=",
     "compile": "echo Not implemented",
+    "delete-tags": "php src/utils/delete-tags.php",
+    "install-deps": "npm install --no-audit --strict-peer-deps",
+    "install-deps-clean": "npm clean-install --no-audit --strict-peer-deps",
     "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
-    "lint-fast": "eslint --config .eslintrc.fast.js --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
-    "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
+    "lint-fast": "npm run lint --config .eslintrc.fast.js",
+    "lint-no-fix": "set TIMING=1 & npm run lint --fix",
     "package-json-lint": "npmPkgJsonLint .",
-    "prepare": "cpy src/git-hooks/* .git/hooks",
+    "php-cs-fixer": "php-cs-fixer fix --verbose",
+    "post-commit": "php src/utils/post-commit.php",
+    "pre-commit": "php src/utils/pre-commit.php",
+    "prepare": "husky install src/git-hooks",
+    "publish": "publish-if-not-exists",
+    "regenerate-lock-file": "npm install --no-audit --package-lock-only --strict-peer-deps",
     "serve": "echo Not implemented",
     "stylelint": "stylelint --fix --max-warnings 0 src/**/*.{css,scss}",
     "stylelint-html": "stylelint --config .stylelintrc-html.js --fix --max-warnings 0 src/**/*.{html,php,vue}",
@@ -51,6 +63,7 @@
     "test": "jest",
     "test-fast": "jest --config=jest.config.fast.js",
     "tsc": "tsc --noEmit",
+    "update": "npm update --no-audit --strict-peer-deps",
     "update-package-check": "ncu --dep dev,peer,prod",
     "update-package-force": "ncu --dep dev,peer,prod --upgrade",
     "vue-tsc": "echo Not implemented"
@@ -99,6 +112,7 @@
     "eslint-plugin-vue": ">=9",
     "eslint-plugin-vue-scoped-css": ">=2",
     "eslint-plugin-xss": ">=0",
+    "husky": ">=8",
     "jest": ">=28",
     "jest-environment-jsdom": ">=28",
     "jest-environment-node": ">=28",
@@ -108,6 +122,7 @@
     "postcss-html": ">=1",
     "postcss-scss": ">=4",
     "prettier": ">=2",
+    "publish-if-not-exists": ">=1",
     "stylelint": ">=14",
     "stylelint-config-standard-scss": ">=4",
     "stylelint-no-unsupported-browser-features": ">=5",
