--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "commitlint": "commitlint --edit",
     "commitlint-all": "commitlint --config commitlint-all.config.js --from=",
     "compile": "echo Not implemented",
+    "config-lint": "node src/utils/config-lint.js",
     "delete-tags": "php src/utils/delete-tags.php",
-    "install-deps": "npm install --no-audit --strict-peer-deps",
-    "install-deps-clean": "npm clean-install --no-audit --strict-peer-deps",
+    "install-clean": "npm clean-install --no-audit --strict-peer-deps",
+    "install-diff": "npm install --no-audit --strict-peer-deps",
     "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
     "lint-fast": "npm run lint --config .eslintrc.fast.js",
     "lint-no-fix": "set TIMING=1 & npm run lint --fix",
@@ -56,6 +57,7 @@
     "publish": "publish-if-not-exists",
     "regenerate-lock-file": "npm install --no-audit --package-lock-only --strict-peer-deps",
     "serve": "echo Not implemented",
+    "sonar": "sonar-scanner",
     "stylelint": "stylelint --fix --max-warnings 0 src/**/*.{css,scss}",
     "stylelint-html": "stylelint --config .stylelintrc-html.js --fix --max-warnings 0 src/**/*.{html,php,vue}",
     "stylelint-html-no-fix": "stylelint --config .stylelintrc-html.js --max-warnings 0 src/**/*.{html,php,vue}",
@@ -117,6 +119,7 @@
     "jest-environment-jsdom": ">=28",
     "jest-environment-node": ">=28",
     "jest-transform-stub": ">=2",
+    "jsonschema": ">=1",
     "npm-check-updates": ">=14",
     "npm-package-json-lint": ">=6",
     "postcss-html": ">=1",
