--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
   "scripts": {
     "add-tags": "php src/utils/add-tags.php",
     "audit": "npm audit",
-    "browserslist": "echo Not implemented",
-    "build": "echo Not implemented",
-    "build-doc": "echo Not implemented",
-    "build-es": "echo Not implemented",
+    "browserslist": "echo Skip browserslist",
+    "build": "echo Skip build",
+    "build-doc": "echo Skip build-doc",
+    "build-es": "echo Skip build-es",
     "clear-cache": "cf cache node_modules/.cache",
     "commit-msg": "npm run commitlint",
     "commitlint": "commitlint --edit",
     "commitlint-all": "commitlint --config commitlint-all.config.js --from=",
-    "compile": "echo Not implemented",
+    "compile": "echo Skip compile",
     "config-lint": "node src/utils/config-lint.js",
     "delete-tags": "php src/utils/delete-tags.php",
     "full-check": "php src/utils/full-check.php",
@@ -57,7 +57,7 @@
     "prepare": "husky install src/git-hooks",
     "publish": "publish-if-not-exists",
     "regenerate-lock-file": "npm install --no-audit --package-lock-only --strict-peer-deps",
-    "serve": "echo Not implemented",
+    "serve": "echo Skip serve",
     "sonar": "sonar-scanner",
     "stylelint": "stylelint --fix --max-warnings 0 src/**/*.{css,scss}",
     "stylelint-html": "stylelint --config .stylelintrc-html.js --fix --max-warnings 0 src/**/*.{html,php,vue}",
@@ -69,7 +69,7 @@
     "update": "npm update --no-audit --strict-peer-deps",
     "update-package-check": "ncu --dep dev,peer,prod",
     "update-package-force": "ncu --dep dev,peer,prod --upgrade",
-    "vue-tsc": "echo Not implemented"
+    "vue-tsc": "echo Skip vue-tsc"
   },
   "peerDependencies": {
     "@commitlint/cli": ">=17",
