fix(utils): Clear folders before builds

--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "stylelint-html": "stylelint --config .stylelintrc-html.js --fix --max-warnings 0 src/**/*.{html,php,vue}",
     "stylelint-html-no-fix": "stylelint --config .stylelintrc-html.js --max-warnings 0 src/**/*.{html,php,vue}",
     "stylelint-no-fix": "stylelint --max-warnings 0 src/**/*.{css,scss}",
-    "test": "jest",
-    "test-fast": "jest --config=jest.config.fast.js",
+    "test": "cf ./lcov-report & jest",
+    "test-fast": "cf ./lcov-report & jest --config=jest.config.fast.js",
     "tsc": "tsc --noEmit",
     "update": "npm update --no-audit --strict-peer-deps",
     "update-package-check": "ncu --dep dev,peer,prod",
