--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "test": "cf ./lcov-report & jest",
     "test-fast": "cf ./lcov-report & jest --config=jest.config.fast.js",
     "tsc": "tsc --noEmit",
-    "update": "npm update --no-audit --strict-peer-deps",
+    "update": "npm update --no-audit --strict-peer-deps & npm run prepare",
     "update-package-check": "ncu --dep dev,peer,prod",
     "update-package-force": "ncu --dep dev,peer,prod --upgrade",
     "upgrade": "npm run update-package-force & npm run install-deps",
