feat(utils): Added "npm:" prefix to npm-related scripts

--- a/package.json
+++ b/package.json
@@ -32,12 +32,10 @@
   ],
   "scripts": {
     "add-tags": "php src/utils/add-tags.php",
-    "audit": "npm audit",
     "browserslist": "echo Skip browserslist",
     "build": "echo Skip build",
     "build-doc": "echo Skip build-doc",
     "build-es": "echo Skip build-es",
-    "clean-install": "npm clean-install --no-audit --strict-peer-deps",
     "clear-cache": "cf cache node_modules/.cache",
     "commit-msg": "npm run commitlint",
     "commitlint": "commitlint --edit",
@@ -46,17 +44,20 @@
     "config-lint": "node src/utils/config-lint.js",
     "delete-tags": "php src/utils/delete-tags.php",
     "full-check": "php src/utils/full-check.php",
-    "install-deps": "npm install --no-audit --strict-peer-deps",
     "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
     "lint-fast": "npm run lint --config .eslintrc.fast.js",
     "lint-no-fix": "set TIMING=1 & npm run lint --fix",
+    "npm:audit": "npm audit",
+    "npm:clean-install": "npm clean-install --no-audit --strict-peer-deps",
+    "npm:install": "npm install --no-audit --strict-peer-deps",
+    "npm:publish": "publish-if-not-exists",
+    "npm:regenerate-lock-file": "npm install --no-audit --package-lock-only --strict-peer-deps",
+    "npm:update": "npm update --no-audit --strict-peer-deps & npm run prepare",
     "package-json-lint": "npmPkgJsonLint .",
     "php-cs-fixer": "php-cs-fixer fix --verbose",
     "post-commit": "php src/utils/post-commit.php",
     "pre-commit": "php src/utils/pre-commit.php",
     "prepare": "husky install src/git-hooks",
-    "publish": "publish-if-not-exists",
-    "regenerate-lock-file": "npm install --no-audit --package-lock-only --strict-peer-deps",
     "serve": "echo Skip serve",
     "sonar": "sonar-scanner",
     "stylelint": "stylelint --fix --max-warnings 0 src/**/*.{css,scss}",
@@ -66,10 +67,9 @@
     "test": "cf ./lcov-report & jest",
     "test-fast": "cf ./lcov-report & jest --config=jest.config.fast.js",
     "tsc": "tsc --noEmit",
-    "update": "npm update --no-audit --strict-peer-deps & npm run prepare",
     "update-package-check": "ncu --dep dev,peer,prod",
     "update-package-force": "ncu --dep dev,peer,prod --upgrade",
-    "upgrade": "npm run update-package-force & npm run install-deps",
+    "upgrade": "npm run update-package-force & npm run npm:install",
     "vue-tsc": "echo Skip vue-tsc"
   },
   "peerDependencies": {
