--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "config-lint": "node src/utils/config-lint.js",
     "delete-tags": "php src/utils/delete-tags.php",
     "full-check": "php src/utils/full-check.php",
-    "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
+    "lint": "npm run lint-no-fix --fix",
     "lint-fast": "npm run lint --config .eslintrc.fast.js",
-    "lint-no-fix": "set TIMING=1 & npm run lint --fix",
+    "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
+    "lint-no-fix-profile": "set TIMING=1 & npm run lint-no-fix",
     "npm:audit": "npm audit",
     "npm:clean-install": "npm clean-install --no-audit --strict-peer-deps",
     "npm:install": "npm install --no-audit --strict-peer-deps",
