feat(utils): Require "husky:unset-hooks"

--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "add-tags": "php src/utils/add-tags.php",
     "browserslist": "browserslist",
     "clear-cache": "cf cache node_modules/.cache",
-    "commit-msg": "npm run commitlint",
     "commitlint": "commitlint --edit",
     "commitlint-all": "commitlint --config commitlint-all.config.js --from=",
     "config-lint": "node src/utils/config-lint.js",
     "delete-tags": "php src/utils/delete-tags.php",
     "full-check": "php src/utils/full-check.php",
+    "husky:commit-msg": "npm run commitlint",
+    "husky:post-commit": "php src/utils/post-commit.php",
+    "husky:pre-commit": "php src/utils/pre-commit.php",
+    "husky:unset-hooks": "git config --unset core.hooksPath",
     "lint": "npm run lint-no-fix --fix",
     "lint-fast": "npm run lint --config .eslintrc.fast.js",
     "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
@@ -52,8 +55,6 @@
     "npm:update": "npm update --no-audit --strict-peer-deps",
     "package-json-lint": "npmPkgJsonLint .",
     "php-cs-fixer": "php-cs-fixer fix --verbose",
-    "post-commit": "php src/utils/post-commit.php",
-    "pre-commit": "php src/utils/pre-commit.php",
     "prepare": "husky install",
     "sonar": "sonar-scanner",
     "stylelint": "stylelint --fix --max-warnings 0 src/**/*.{css,scss}",
