--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "lint-fast": "npm run lint --config .eslintrc.fast.js",
     "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
     "lint-no-fix-profile": "set TIMING=1 & npm run lint-no-fix",
-    "npm:clean-install": "npm clean-install --no-audit --strict-peer-deps",
+    "npm:install-clean": "npm install-clean --no-audit --strict-peer-deps",
     "npm:install": "npm install --no-audit --strict-peer-deps",
     "npm:publish": "publish-if-not-exists",
     "npm:regenerate-lock-file": "npm install --no-audit --package-lock-only --strict-peer-deps",
