--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@skylib/config",
   "version": "3.7.0",
   "private": false,
-  "description": "Config for commitlint, eslint, jest, php-cs-fixer, stylelint, typedoc, and typescript",
+  "description": "Config for commitlint, eslint, jest, npm-package-json-lint, php-cs-fixer, phpstan, stylelint, typedoc, and typescript",
   "keywords": [
     "commitlint",
     "config",
@@ -47,13 +47,14 @@
     "lint-fast": "npm run lint --config .eslintrc.fast.js",
     "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
     "lint-no-fix-profile": "set TIMING=1 & npm run lint-no-fix",
-    "npm:install-clean": "npm install-clean --no-audit --strict-peer-deps",
     "npm:install": "npm install --no-audit --strict-peer-deps",
+    "npm:install-clean": "npm install-clean --no-audit --strict-peer-deps",
     "npm:publish": "publish-if-not-exists",
     "npm:regenerate-lock-file": "npm install --no-audit --package-lock-only --strict-peer-deps",
     "npm:update": "npm update --no-audit --strict-peer-deps",
     "package-json-lint": "npmPkgJsonLint .",
     "php-cs-fixer": "php-cs-fixer fix --verbose",
+    "phpstan": "phpstan analyse -c phpstan.neon",
     "prepare": "husky install",
     "sonar": "sonar-scanner",
     "stylelint": "stylelint --fix --max-warnings 0 src/**/*.{css,scss}",
