feat(utils): Added "composer/..." scripts

--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "clear-cache": "cf cache node_modules/.cache",
     "commitlint": "commitlint --edit",
     "commitlint-all": "commitlint --config commitlint-all.config.js --from=",
+    "composer:bump": "composer bump",
+    "composer:dump-autoload": "composer dump-autoload",
+    "composer:outdated": "composer outdated",
+    "composer:reinstall": "composer reinstall *",
+    "composer:update": "composer update",
     "config-lint": "node src/utils/config-lint.js",
     "delete-tags": "php src/utils/delete-tags.php",
     "full-check": "php src/utils/full-check.php",
