--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,28 @@
 {
+  "archive": {
+    "exclude": [
+      "*",
+      ".browserslistrc",
+      ".editorconfig",
+      ".eslintignore",
+      ".gitignore",
+      ".eslintrc.js",
+      ".eslintrc.fast.js",
+      ".eslintrc.overrides.js",
+      ".eslintrc.rule-overrides.js",
+      ".eslintrc.temp.js",
+      ".npmpackagejsonlintrc.json",
+      ".php-cs-fixer.php",
+      ".prettierrc.js",
+      ".stylelintrc.js",
+      ".stylelintrc-html.js",
+      "!composer.json",
+      "!composer.lock",
+      "!/src/core",
+      "!/src/php-cs-config.php",
+      "!/src/phpstan.neon"
+    ]
+  },
   "authors": [
     {
       "email": "admin.phpdev@gmail.com",
@@ -8,6 +32,10 @@
   "description": "Config for commitlint, eslint, jest, npm-package-json-lint, php-cs-fixer, phpstan, stylelint, typedoc, and typescript",
   "homepage": "https://github.com/ilyub/config",
   "license": "ISC",
-  "name": "ilyub/config",
+  "name": "skylib/config",
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3.8",
+    "phpstan/phpstan": "^1.7"
+  },
   "type": "library"
 }
