--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
   "license": "ISC",
   "author": "Ilia Liubinskii <admin.phpdev@gmail.com> (https://github.com/ilyub)",
   "publisher": "ilyub",
-  "main": "src/index.js",
+  "main": "api/index.js",
   "files": [
     "/index.d.ts",
+    "/api",
+    "/bin",
     "/src",
     "!**/samples"
   ],
   "scripts": {
-    "add-tags": "php src/utils/add-tags.php",
+    "add-tags": "php bin/add-tags.php",
     "browserslist": "browserslist",
     "clear-cache": "cf cache node_modules/.cache",
     "commitlint": "commitlint --edit",
@@ -41,16 +43,16 @@
     "composer:outdated": "composer outdated",
     "composer:reinstall": "composer reinstall *",
     "composer:update": "composer update",
-    "config-lint": "node src/utils/config-lint.js",
-    "delete-tags": "php src/utils/delete-tags.php",
-    "full-check": "php src/utils/full-check.php",
+    "config-lint": "node bin/config-lint.js",
+    "delete-tags": "php bin/delete-tags.php",
+    "full-check": "php bin/full-check.php",
     "husky:commit-msg": "npm run commitlint",
-    "husky:post-commit": "php src/utils/post-commit.php",
-    "husky:pre-commit": "php src/utils/pre-commit.php",
+    "husky:post-commit": "php bin/post-commit.php",
+    "husky:pre-commit": "php bin/pre-commit.php",
     "husky:unset-hooks": "git config --unset core.hooksPath",
     "lint": "npm run lint-no-fix --fix",
     "lint-fast": "npm run lint --config .eslintrc.fast.js",
-    "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,fixtures,src,tests}/**/*.{js,ts,vue}",
+    "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
     "lint-no-fix-profile": "set TIMING=1 & npm run lint-no-fix",
     "npm:install": "npm install --no-audit --strict-peer-deps",
     "npm:install-clean": "npm install-clean --no-audit --strict-peer-deps",
