--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.password=password
 sonar.projectKey=config
 sonar.projectName=Config
 sonar.sourceEncoding=UTF-8
-sonar.sources=src
+sonar.sources=api,bin,src
 sonar.tests=tests
 sonar.typescript.file.suffixes=.ts,.vue
 sonar.typescript.tsconfigPath=tsconfig-min.json
