--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
       ".*",
       "!/composer.json",
       "!/composer.lock",
-      "!/{api,src}/**/*.{php,neon}"
+      "!/{api,bin,src}/**/*.{php,neon}"
     ]
   },
   "authors": [
