feat(bin,schemas): Edited scripts

--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "npm:regenerate-lock-file": "npm install --no-audit --package-lock-only --strict-peer-deps",
     "npm:update": "npm update --no-audit --strict-peer-deps",
     "package-json-lint": "npmPkgJsonLint .",
-    "php-cs-fixer": "php-cs-fixer fix --verbose",
-    "phpstan": "phpstan analyse -c phpstan.neon",
-    "phpstan-quiet": "phpstan analyse -c phpstan.neon --quiet",
+    "php-cs-fixer": "php vendor/bin/php-cs-fixer fix --verbose",
+    "phpstan": "php vendor/bin/phpstan analyse -c phpstan.neon",
+    "phpstan-quiet": "php vendor/bin/phpstan analyse -c phpstan.neon --quiet",
     "prepare": "husky install",
     "sonar": "sonar-scanner",
     "stylelint": "stylelint --fix --max-warnings 0 src/**/*.{css,scss}",
