--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,14 @@
 sonar.coverage.exclusions=**
 sonar.cpd.exclusions=
-sonar.exclusions=cache/**,dist/**,docs/**,es/**,lcov-report/**,node_modules/**
+sonar.exclusions=
+sonar.issue.ignore.block=e1
+sonar.issue.ignore.block.e1.beginBlockRegexp=sonar-ignore-begin
+sonar.issue.ignore.block.e1.endBlockRegexp=sonar-ignore-end
 sonar.javascript.file.suffixes=.js
 sonar.javascript.lcov.reportPaths=lcov.info
 sonar.login=admin
 sonar.password=password
+sonar.php.coverage.reportPaths=
 sonar.projectKey=config
 sonar.projectName=Config
 sonar.sourceEncoding=UTF-8
